# iflow-cli-sdk-rust

./: .claude  .gitignore  AGENTS.md  COVERAGE.md  COVERAGE_SUMMARY.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  ROADMAP.md  TESTING_SUMMARY.md  TEST_COVERAGE.md  coverage.sh
.github/workflows/: ci.yml  copilot-setup-steps.yml  coverage.yaml  release.yml  windows-e2e.yml
.iflow/: settings.local.json
.iflow/agents/: rust-expert.md  rust-pro.md
examples/: README.md  basic_client.rs  explore_api.rs  logging_example.rs  mcp_example.rs  permission_modes.rs  query.rs  query_with_config.rs  test_both_modes.rs  test_mcp.rs  test_realtime.rs  test_response.rs  test_stream.rs  websocket_client.rs  websocket_client_debug.rs  websocket_existing_process.rs  websocket_mcp.rs
examples/advanced/: explore_api.rs  logging_example.rs  mcp_example.rs  permission_modes.rs
examples/basic/: README.md  basic_client.rs
examples/query/: query.rs  query_with_config.rs  test_response.rs
examples/websocket/: websocket_client.rs  websocket_client_debug.rs  websocket_existing_process.rs  websocket_mcp.rs
scripts/: coverage.sh
src/: acp_protocol.rs  client.rs  error.rs  lib.rs  logger.rs  main.rs  process_manager.rs  query.rs  types.rs  websocket_transport.rs
src/client/: acp_handler.rs  handler.rs  mod.rs  stream.rs
src/config/: file_access.rs  logging.rs  mod.rs  options.rs  process.rs  websocket.rs
src/connection/: handler.rs  mod.rs  stdio.rs  websocket.rs
src/message/: mod.rs  types.rs  utils.rs
src/protocol/: auth.rs  core.rs  mod.rs  notification.rs  session.rs
tests/: client_basic_tests.rs  client_exception_additional_tests.rs  client_exception_tests.rs  config_tests.rs  coverage_boost_tests.rs  e2e_tests.rs  error_message_details_tests.rs  error_tests.rs  file_access_and_mcp_tests.rs  iflow_options_tests.rs  integration_error_tests.rs  integration_with_iflow.rs  lib_tests.rs  logger_additional_tests.rs  logger_tests.rs  mcp_integration_tests.rs  mcp_tests.rs  message_additional_tests.rs  message_comprehensive_tests.rs  message_tests.rs  plan_message_test.rs  process_cleanup_tests.rs  process_manager_additional_tests.rs  process_manager_tests.rs  query_additional_tests.rs  query_comprehensive_tests.rs  test_basic.rs  test_logger.rs  test_websocket.rs  timeout_test.rs  types_additional_tests.rs  types_comprehensive_tests.rs  user_message_tests.rs  websocket_config_tests.rs  websocket_existing_process_tests.rs  websocket_integration_tests.rs  websocket_transport_tests.rs
tests/client/: client_exception_tests.rs
tests/core/: message_tests.rs
tests/mcp/: mcp_integration_tests.rs  mcp_tests.rs
tests/process/: process_manager_tests.rs
tests/query/: query_tests.rs
tests/websocket/: websocket_config_tests.rs  websocket_existing_process_tests.rs  websocket_integration_tests.rs
