[package]
name = "iflow-cli-sdk-rust"
version = "0.1.6"
edition = "2024"
authors = ["iFlow Community Team"]
description = "Rust SDK for iFlow CLI using Agent Client Protocol"
repository = "https://github.com/vibe-ideas/iflow-cli-sdk-rust"
keywords = ["iflow", "agent", "ai", "websocket", "protocol"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"
license = "MIT"
exclude = ["/.github", "/tests/*", "/.vscode", "/.iflow"]

[dependencies]
# Use the official agent-client-protocol crate
agent-client-protocol = "0.7.0"

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async utilities
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }

# Async traits
async-trait = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.18", features = ["v4"] }
url = "2.5"
tokio-tungstenite = "0.28"
futures-util = { version = "0.3.31", features = ["compat"] }

# Optional dependencies for enhanced functionality
# base64 = { version = "0.22", optional = true }
# mime = { version = "0.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.48", features = ["full"] }
serial_test = "3.2.0"

[features]
# file-support = ["base64", "mime"]

[[example]]
name = "basic_client"
path = "examples/basic/basic_client.rs"

[[example]]
name = "query"
path = "examples/query/query.rs"

[[example]]
name = "logging_example"
path = "examples/advanced/logging_example.rs"

[[example]]
name = "websocket_client"
path = "examples/websocket/websocket_client.rs"

[[example]]
name = "permission_modes"
path = "examples/advanced/permission_modes.rs"

[[example]]
name = "mcp_example"
path = "examples/advanced/mcp_example.rs"

[[example]]
name="explore_api"
path = "examples/advanced/explore_api.rs"

[[example]]
name="query_with_config"
path = "examples/query/query_with_config.rs"

[[example]]
name="test_response"
path = "examples/query/test_response.rs"

[[example]]
name="websocket_mcp"
path = "examples/websocket/websocket_mcp.rs"

[[test]]
name = "message_tests"
path = "tests/core/message_tests.rs"

[[test]]
name = "timeout_test"
path = "tests/core/timeout_test.rs"

[[test]]
name = "e2e_tests"
path = "tests/e2e/e2e_tests.rs"
